--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -6,7 +6,7 @@ WORKER_IP = '192.168.56.111'
 TOKEN_PATH = '/vagrant/secrets/node-token'
 
 Vagrant.configure('2') do |config|
-  config.vm.box = 'generic/alpine318'
+  config.vm.box = 'boxen/alpine-3.20'
   config.vm.synced_folder '.', '/vagrant'
   config.ssh.insert_key = false
   config.ssh.dsa_authentication = false
