--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -6,14 +6,15 @@ Vagrant.configure('2') do |cfg|
   cfg.vm.synced_folder '.', '/vagrant'
   cfg.ssh.insert_key = false
   cfg.ssh.dsa_authentication = false
+  cfg.vm.boot_timeout = 600
 
   cfg.vm.define SERVER_NAME do |control|
     control.vm.hostname = SERVER_NAME
     control.vm.network 'private_network', ip: SERVER_IP
     control.vm.provider 'virtualbox' do |v|
       v.name = SERVER_NAME
-      v.cpus = 1
-      v.memory = 1024
+      v.cpus = 2
+      v.memory = 2024
     end
     control.vm.provision 'shell', privileged: true, path: 'scripts/setup.sh'
   end
